force-app/main/default/objects/Partnership_Objective__c/Partnership_Objective__c.object-meta.xml
<CustomObject>
    <description>used for Account Plan</description>
    <label>Partnership Objective</label>
    <nameField>
        <displayFormat>PO{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partnership Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>