force-app/main/default/objects/Partnership_Objective__c/fields/Objective_for__c.field-meta.xml
<CustomField>
    <fullName>Objective_for__c</fullName>
    <label>Objective for</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qantas</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>