force-app/main/default/objects/Partnership_Objective__c/fields/Objective_Status_f__c.field-meta.xml
<CustomField>
    <fullName>Objective_Status_f__c</fullName>
    <formula>CASE(Objective_Status__c,
&quot;Achieving&quot;,IMAGE(&quot;/resource/traffic_green&quot;, &quot;Achieving&quot;),
&quot;Watch and act&quot;,IMAGE(&quot;/resource/traffic_yellow&quot;, &quot;Watch and act&quot;),
&quot;Not achieving&quot;,IMAGE(&quot;/resource/traffic_red&quot;, &quot;Not achieving&quot;),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Obj Status Indicator</label>
    <type>Text</type>
</CustomField>