force-app/main/default/objects/Partnership_Objective__c/fields/Status_since_last_review__c.field-meta.xml
<CustomField>
    <fullName>Status_since_last_review__c</fullName>
    <label>Change since last review</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>